--- a/index.html
+++ b/index.html
@@ -51,14 +51,15 @@
                     </h1>
             </div>
 
-            <div class="btn-group go-about" role="group" aria-label="...">
-                <a href="#about">
-                    <button type="button" class="btn btn-default btn-go-about">
-                        <i class="glyphicon glyphicon-menu-down"></i>
-                    </button>
-                </a>
-            </div>
+
         </section>
+        <div class="go-about" role="group" aria-label="...">
+            <a href="#about">
+                <button type="button" class="btn btn-default btn-go-about">
+                    <i class="glyphicon glyphicon-menu-down"></i>
+                </button>
+            </a>
+        </div>
     </div>
 </section>
 
@@ -120,7 +121,7 @@
             <li role="presentation"><a href="#">Motion</a></li>
         </ul>
         <div class="row-portfolio row text-center">
-            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4 portfolio-item">
                 <img class="img-portfolio" src="images/fossil.jpg" alt="fossil" data-toggle="modal" data-target="#fossil"/>
             </div>
             <div class="modal fade" id="fossil" tabindex="-1" role="dialog" aria-labelledby="fossilLabel">
@@ -162,20 +163,211 @@
                 </div>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <img class="img-portfolio" src="images/contacts.jpg" alt="contacts"/>
+                <img class="img-portfolio" src="images/contacts.jpg" alt="contacts"  data-toggle="modal" data-target="#modalContacts" />
             </div>
+            <div class="modal fade" id="modalContacts" tabindex="-1" role="dialog" aria-labelledby="fossilLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <h2>
+                                Project Title
+                            </h2>
+                            <div class="row-project row">
+                                <div class="col-xs-6 col-sm-5 col-sm-offset-1">
+                                    <img class="img-project" src="images/contacts.jpg" alt="image">
+                                    <img class="img-project" src="images/contacts.jpg" alt="image">
+                                </div>
+                                <div class="col-xs-6 col-sm-5">
+                                    <dl class="dl-project">
+                                        <dt>Date</dt>
+                                        <dd>1st December 2014</dd>
+                                        <dt>Category</dt>
+                                        <dd>Web, UI</dd>
+                                    </dl>
+                                    <p>
+                                        This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+                                        aliquet. Aenean sollicitudin, lorem quis bibendum auctor. Aenean sollicitudin,
+                                        lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+                                        elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+                                        accumsan ipsum.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <img class="img-portfolio" src="images/projectt.jpg" alt="fossil"/>
+                <img class="img-portfolio" src="images/projectt.jpg" alt="projects"  data-toggle="modal" data-target="#projects"/>
             </div>
+            <div class="modal fade" id="projects" tabindex="-1" role="dialog" aria-labelledby="projectsLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <h2>
+                                Project Title
+                            </h2>
+                            <div class="row-project row">
+                                <div class="col-xs-6 col-sm-5 col-sm-offset-1">
+                                    <img class="img-project" src="images/projectt.jpg" alt="image">
+                                </div>
+                                <div class="col-xs-6 col-sm-5">
+                                    <dl class="dl-project">
+                                        <dt>Date</dt>
+                                        <dd>1st December 2014</dd>
+                                        <dt>Category</dt>
+                                        <dd>Web, UI</dd>
+                                    </dl>
+                                    <p>
+                                        This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+                                        aliquet. Aenean sollicitudin, lorem quis bibendum auctor. Aenean sollicitudin,
+                                        lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+                                        elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+                                        accumsan ipsum.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <img class="img-portfolio" src="images/headingone.jpg" alt="headingone"/>
+                <img class="img-portfolio" src="images/headingone.jpg" alt="headingone"  data-toggle="modal" data-target="#headingone"/>
             </div>
+            <div class="modal fade" id="headingone" tabindex="-1" role="dialog" aria-labelledby="headingoneLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <h2>
+                                Project Title
+                            </h2>
+                            <div class="row-project row">
+                                <div class="col-xs-6 col-sm-5 col-sm-offset-1">
+                                    <img class="img-project" src="images/headingone.jpg" alt="image">
+                                </div>
+                                <div class="col-xs-6 col-sm-5">
+                                    <dl class="dl-project">
+                                        <dt>Date</dt>
+                                        <dd>1st December 2014</dd>
+                                        <dt>Category</dt>
+                                        <dd>Web, UI</dd>
+                                    </dl>
+                                    <p>
+                                        This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+                                        aliquet. Aenean sollicitudin, lorem quis bibendum auctor. Aenean sollicitudin,
+                                        lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+                                        elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+                                        accumsan ipsum.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <img class="img-portfolio" src="images/350.jpg" alt="350"/>
+                <img class="img-portfolio" src="images/350.jpg" alt="350" data-toggle="modal" data-target="#i350"/>
             </div>
+            <div class="modal fade" id="i350" tabindex="-1" role="dialog" aria-labelledby="i350lLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <h2>
+                                Project Title
+                            </h2>
+                            <div class="row-project row">
+                                <div class="col-xs-6 col-sm-5 col-sm-offset-1">
+                                    <img class="img-project" src="images/350.jpg" alt="image">
+                                </div>
+                                <div class="col-xs-6 col-sm-5">
+                                    <dl class="dl-project">
+                                        <dt>Date</dt>
+                                        <dd>1st December 2014</dd>
+                                        <dt>Category</dt>
+                                        <dd>Web, UI</dd>
+                                    </dl>
+                                    <p>
+                                        This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+                                        aliquet. Aenean sollicitudin, lorem quis bibendum auctor. Aenean sollicitudin,
+                                        lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+                                        elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+                                        accumsan ipsum.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
             <div class="col-xs-12 col-sm-12 col-md-6 col-lg-4">
-                <img class="img-portfolio" src="images/action.jpg" alt="action"/>
+                <img class="img-portfolio" src="images/action.jpg" alt="action"  data-toggle="modal" data-target="#action"/>
             </div>
+            <div class="modal fade" id="action" tabindex="-1" role="dialog" aria-labelledby="fossilLabel">
+                <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <i class="fa fa-times-circle-o" aria-hidden="true"></i>
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <h2>
+                                Project Title
+                            </h2>
+                            <div class="row-project row">
+                                <div class="col-xs-6 col-sm-5 col-sm-offset-1">
+                                    <img class="img-project" src="images/action.jpg" alt="image">
+                                </div>
+                                <div class="col-xs-6 col-sm-5">
+                                    <dl class="dl-project">
+                                        <dt>Date</dt>
+                                        <dd>1st December 2014</dd>
+                                        <dt>Category</dt>
+                                        <dd>Web, UI</dd>
+                                    </dl>
+                                    <p>
+                                        This is Photoshop's version of Lorem Ipsum. Proin gravida nibh vel velit auctor
+                                        aliquet. Aenean sollicitudin, lorem quis bibendum auctor. Aenean sollicitudin,
+                                        lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id
+                                        elit. Duis sed odio sit amet nibh vulputate cursus a sit amet mauris. Morbi
+                                        accumsan ipsum.
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </section>
@@ -191,10 +383,14 @@
                         aliquet. Aenean
                         sollicitudin, lorem quis bibendum auctor,</p>
                     <div class="icon-circle">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <a href="http://twitter.com">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
                     </div>
                     <div class="icon-circle">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                        <a href="http://instagram.com">
+                            <i class="fa fa-instagram" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
                 <div class="kramer-col-team col-xs-12  col-sm-6  col-md-6  col-lg-4">
@@ -204,7 +400,9 @@
                         aliquet. Aenean
                         sollicitudin, lorem quis bibendum auctor,</p>
                     <div class="icon-circle">
-                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                        <a href="http://twitter.com">
+                            <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
                     </div>
                 </div>
             </div>
@@ -216,7 +414,7 @@
         <h2 class="kramer-title">Contact</h2>
         <p class="text-contact">Please contact us and we can discuss work!</p>
         <div class="row kramer-row-contact">
-            <div class="col-xs-12 col-sm-12 col-md-4 col-md-offset-3 col-lg-4 ">
+            <div class="col-xs-12 col-sm-8 col-sm-offset-2 col-md-4 col-md-offset-3 col-lg-4 ">
                 <form class="kramer-form">
                     <div class="form-group">
                         <div class="border-green">
@@ -235,7 +433,7 @@
                         </div>
                         <div class="border-green">
                             <label>
-                                <textarea class="form-control" rows="3" placeholder="Message"></textarea>
+                                <textarea class="form-control form-contact" rows="3" placeholder="Message"></textarea>
                             </label>
                         </div>
                     </div>
@@ -265,7 +463,7 @@
             </div>
         </div>
         <address class="row kramer-address">
-            <div class="col-fotter col-logo col-xs-12 col-sm-8 col-md-4 col-lg-4">
+            <div class="col-fotter col-logo col-xs-12 col-sm-12 col-md-4 col-lg-4">
                 <p>
                     129 West 81st Street
                 <span class="text-fotter">
@@ -273,17 +471,29 @@
                 </span>
                 </p>
             </div>
-            <div class="col-fotter col-email col-xs-12 col-sm-8 col-md-4 col-lg-4">
+            <div class="col-fotter col-email col-xs-12 col-sm-12 col-md-4 col-lg-4">
                 <p>giddyup@kramer.com
                 <span class="text-fotter">
                     +1 212-532-1256
                 </span>
                 </p>
             </div>
-            <div class="col-fotter col-icone col-xs-12 col-sm-8 col-md-4 col-lg-4">
-                <div class="icon-circle"><i class="fa fa-twitter" aria-hidden="true"></i></div>
-                <div class="icon-circle"><i class="fa fa-instagram" aria-hidden="true"></i></div>
-                <div class="icon-circle"><i class="fa fa-facebook" aria-hidden="true"></i></div>
+            <div class="col-fotter col-icone col-xs-12 col-sm-12 col-md-4 col-lg-4">
+                <div class="icon-circle">
+                    <a href="http://twitter.com">
+                        <i class="fa fa-twitter" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <div class="icon-circle">
+                    <a href="http://instagram.com">
+                        <i class="fa fa-instagram" aria-hidden="true"></i>
+                    </a>
+                </div>
+                <div class="icon-circle">
+                    <a href="http://facebook.com">
+                        <i class="fa fa-facebook" aria-hidden="true"></i>
+                    </a>
+                </div>
             </div>
         </address>
     </div>
@@ -291,5 +501,25 @@
 
 <script src="js/jquery-3.1.1.min.js"></script>
 <script src="js/bootstrap.min.js"></script>
+<script>
+    $(document).ready(function(){
+        $("#menu").click(function (event) {
+            event.preventDefault();
+
+            //забираем идентификатор бока с атрибута href
+            var id  = $(event.target).attr('href'),
+                top;
+
+            if (id) {
+                top = $(id).offset().top;
+                console.log(id, top, this);
+
+                //анимируем переход на расстояние - top за 1500 мс
+            $('body,html').animate({scrollTop: top}, 500);
+            }
+        });
+    });
+
+</script>
 </body>
 </html>
